--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" type="text/css" href="">
         <link rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.css" media="screen">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
-        <script type="text/javascript" src="script.js"></script>
+        <script type="text/javascript" src="scriptmin.js"></script>
         <script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script>  
 
 
