--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <html>
 
     <head>
-        <link rel="stylesheet" type="text/css" href="css/stylemin.css">
-        <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,900" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+        <link async rel="stylesheet" type="text/css" href="css/stylemin.css">
+        <link hasync ref="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,900" rel="stylesheet">
+        <link async href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <link async rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="icon" href="images/favicon.jpg" type="image/jpg">
         <link rel="stylesheet" type="text/css" href="">
-        <link rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.css" media="screen">
+        <link async rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.css" media="screen">
         <script async src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
         <script async type="text/javascript" src="scriptmin.js"></script>
         <script async src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script>  
