--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
         </footer> 
 
 <link async rel="stylesheet" type="text/css" href="css/stylemin.css">
-        <link hasync ref="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,900" rel="stylesheet">
+        <!--><link hasync ref="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,900" rel="stylesheet">
         <link async href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <link async rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-        <link rel="icon" href="images/favicon.jpg" type="image/jpg">
+        <link rel="icon" href="images/favicon.jpg" type="image/jpg"><-->
         <link async rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.css" media="screen">
         <script async src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
         <script async type="text/javascript" src="scriptmin.js"></script>
