--- a/index.html
+++ b/index.html
@@ -132,15 +132,22 @@
             </div>
         </footer> 
 
-<link async rel="stylesheet" type="text/css" href="css/stylemin.css">
-        <!--><link hasync ref="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,900" rel="stylesheet">
-        <link async href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-        <link async rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-        <link rel="icon" href="images/favicon.jpg" type="image/jpg"><-->
-        <link async rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.css" media="screen">
-        <script async src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
-        <script async type="text/javascript" src="scriptmin.js"></script>
-        <script async src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script> 
-     
+        <link async rel="stylesheet" type="text/css" href="css/stylemin.css">
+                <link hasync ref="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,900" rel="stylesheet">
+                <link async href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+                <link async rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+                <link rel="icon" href="images/favicon.jpg" type="image/jpg">
+                <link async rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.css" media="screen">
+                <script async src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
+                <script async type="text/javascript" src="scriptmin.js"></script>
+                <script async src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script> 
+             <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
+        <script>
+        WebFont.load({
+           google: {
+             families: ['Source Sans Pro:400,600,700,400italic,700italic', 'Roboto Condensed:400,700']
+           }
+         });
+        </script>
     </body>
 </html>
