--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <link async rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
                 <link rel="icon" href="images/favicon.jpg" type="image/jpg">
                 <link async rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.css" media="screen">
-                <script async src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.js"></script>
+                <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
                 <script async type="text/javascript" src="scriptmin.js"></script>
                 <script async src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script> 
              <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
