--- a/index.html
+++ b/index.html
@@ -132,16 +132,16 @@
             </div>
         </footer> 
 
-        <link async rel="stylesheet" type="text/css" href="css/stylemin.css">
-                <link hasync ref="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,900" rel="stylesheet">
-                <link async href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-                <link async rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+                <link async defer rel="stylesheet" type="text/css" href="css/stylemin.css">
+                <link async defer ref="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,900" rel="stylesheet">
+                <link async defer href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+                <link async defer rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
                 <link rel="icon" href="images/favicon.jpg" type="image/jpg">
                 <link async rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.css" media="screen">
-                <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-                <script async type="text/javascript" src="scriptmin.js"></script>
-                <script async src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script> 
-             <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
+                <script async defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+                <script async defer type="text/javascript" src="scriptmin.js"></script>
+                <script async defer src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script> 
+                <script async defer src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
         <script>
         WebFont.load({
            google: {
