--- a/index.html
+++ b/index.html
@@ -132,10 +132,8 @@
             </div>
         </footer> 
 
-                <link async defer rel="stylesheet" type="text/css" href="css/stylemin.css">
-                <link async defer ref="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,900" rel="stylesheet">
-                <link async defer href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-                <link async defer rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+                <link async rel="stylesheet" type="text/css" href="css/stylemin.css">
+                <link async rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
                 <link rel="icon" href="images/favicon.jpg" type="image/jpg">
                 <link async rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.css" media="screen">
                 <script async defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -145,7 +143,7 @@
         <script>
         WebFont.load({
            google: {
-             families: ['Source Sans Pro:400,600,700,400italic,700italic', 'Roboto Condensed:400,700']
+             families: ['Playfair Display:400,400i,900', 'Raleway:400,700']
            }
          });
         </script>
