--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
             </div>
         </footer> 
 
-                <link async rel="stylesheet" type="text/css" href="css/stylemin.css">
-                <link async rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+                <link async rel="stylesheet" type="text/css" href="css/style.css">
+                
                 <link rel="icon" href="images/favicon.jpg" type="image/jpg">
-                <link async rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.css" media="screen">
+                
                 <script async defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
                 <script async defer type="text/javascript" src="scriptmin.js"></script>
                 <script async defer src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script> 
